--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,8 @@ span{
     padding: 10px;
     margin: 1em 0 1em 0;
     background-color: white;
+    margin: 10px;
+
 }
 td{
     max-width: 200px;
